mail/proton-mail-html-transformer/src/snapshots/proton_mail_html_transformer__transforms__test__inject_style.snap
---
source: proton-mail-html-transformer/src/transforms.rs
expression: html
---
<html><head>
   <html><head><style>
  body {
    background-color: Canvas;
    color: CanvasText;
    color-scheme: light dark;
  }
</style>
</head><body></body></html></head>
   <body>
   

</body></html>
