mail/proton-mail-html-transformer/src/snapshots/proton_mail_html_transformer__transforms__test__inject_style_no_head.snap
---
source: proton-mail-html-transformer/src/transforms.rs
expression: html
---
<html><head><html>
<style>
  body {
    background-color: Canvas;
    color: CanvasText;
    color-scheme: light dark;
  }
</style>
</html></head><body><div>
          ain't no `head` here boss
        </div>
        </body></html>
