mail/proton-mail-html-transformer/src/snapshots/proton_mail_html_transformer__transforms__test__insert_links.snap
---
source: proton-mail-html-transformer/src/transforms.rs
expression: html
---
<html><head></head><body><div id="1"> this is some content without a link </div>
        <div id="2"><html><a href="https://proton.me/" rel="noreferrer">https://proton.me/</a> </html></div>
        <div id="3"><html>this is some content with a link to <a href="https://proton.me/" rel="noreferrer">https://proton.me/</a> :) </html></div>
        <div id="4"><html>strippin' balls <a href="https://ads.com/" rel="noreferrer">https://ads.com/</a> </html></div>
        <div id="5"> incompete url not handled: proton.me </div>
        <div id="6"><html>empty url not matched: https: </html></div>
        <div id="7"> empty url not matched: mailto: </div>
        <div id="8"><html>localhost <a href="http://localhost/" rel="noreferrer">http://localhost/</a> </html></div>
        <div id="9"><html>ip <a href="http://127.0.0.1/" rel="noreferrer">http://127.0.0.1/</a> </html></div>
        <div id="10"> mailto:foo@bar </div>
        </body></html>
